AWT-252 Fix overflow of sidejob total

--- a/src/scss/_deputy.scss
+++ b/src/scss/_deputy.scss
@@ -789,6 +789,9 @@ $abstimmverhalten-node-item-width: 18px;
     vertical-align: top;
     white-space: nowrap;
     padding-left: $space-large;
+    @media (max-width: $breakpoint-s-max) {
+      clear: both;
+    }
   }
   .sidejob-overview__item--active {
     background: $orangeBG;
